# bookstore

./: .gitignore  README.md  pyproject.toml  run.py
src/bookstore/: __init__.py  book_service.py  config.py  models.py
src/bookstore/books/: __init__.py  routes.py
tests/: TestConfig.py  test_book_service.py
