[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = ""
authors = ["Vishal Joshi <vjoshi@ebi.ac.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
flask-sqlalchemy = "^3.1.1"


[tool.poetry.group.dev.dependencies]
setuptools = "^79.0.1"
pytest = "^8.3.5"
ruff = "^0.11.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]